--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,8 @@
     <color name="light_red">#FF837A</color>
     <color name="light_blue">#34b7f1</color>
     <color name="light_yellow">#FDE499</color>
-    <color name="light_green">#80FF85</color>
+    <color name="light_green">#77CA7A</color>
+    <color name="tea_green">#DCF8C6</color>
     <color name="dark_blue_grey">#272A3C</color>
     <color name="purple">#64518A</color>
     <color name="button_purple">#553667</color>
